feat: 모놀리틱 아키텍처에서 MSA로 전환