@@ -1,19 +1,16 @@
 package com.example.product.application;
 
-import com.example.common.domain.Money;
-import com.example.common.dto.ProductPurchaseRequest;
-import com.example.common.dto.ProductPurchaseResponse;
-import com.example.common.dto.ProductStockRecoveryRequest;
 import com.example.product.domain.AmountCalculator;
+import com.example.product.domain.Money;
 import com.example.product.domain.Product;
-import com.example.product.dto.ProductDetails;
-import com.example.product.dto.ProductDto;
+import com.example.product.dto.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 
@@ -51,7 +48,7 @@ class ProductServiceTest {
         Product product = Product.builder()
                 .id(1L)
                 .name("name")
-                .price(com.example.common.domain.Money.of("10000"))
+                .price(Money.of("10000"))
                 .stockQuantity(100)
                 .build();
         given(productRepository.findById(1L))
@@ -100,23 +97,23 @@ class ProductServiceTest {
 
         assertEquals(1L, productList.get(0).productId());
         assertEquals("name1", productList.get(0).name());
-        assertEquals("10000", productList.get(0).price());
+        assertEquals(new BigDecimal("10000"), productList.get(0).price());
 
         assertEquals(2L, productList.get(1).productId());
         assertEquals("name2", productList.get(1).name());
-        assertEquals("20000", productList.get(1).price());
+        assertEquals(new BigDecimal("20000"), productList.get(1).price());
 
         assertEquals(3L, productList.get(2).productId());
         assertEquals("name3", productList.get(2).name());
-        assertEquals("30000", productList.get(2).price());
+        assertEquals(new BigDecimal("30000"), productList.get(2).price());
     }
 
     @Test
     void 상품을_구매한다() {
         //given
-        List<ProductPurchaseRequest> productPurchaseRequests = List.of(
-                new ProductPurchaseRequest(1L, 1),
-                new ProductPurchaseRequest(2L, 2)
+        List<ProductPurchaseFeignRequest> productPurchaseFeignRequests = List.of(
+                new ProductPurchaseFeignRequest(1L, 1),
+                new ProductPurchaseFeignRequest(2L, 2)
         );
         Product product1 = Product.builder()
                 .id(1L)
@@ -139,39 +136,39 @@ class ProductServiceTest {
         given(calculator.calculateAmount(product2, 2))
                 .willReturn(Money.of("40000"));
         //when
-        List<ProductPurchaseResponse> productPurchaseResponses = productService.purchaseProducts(productPurchaseRequests);
+        List<ProductPurchaseFeignResponse> productPurchaseFeignRespons = productService.purchase(productPurchaseFeignRequests);
         //then
-        assertEquals(2, productPurchaseResponses.size());
-        assertEquals(1L, productPurchaseResponses.get(0).productId());
-        assertEquals(1, productPurchaseResponses.get(0).quantity());
-        assertEquals("name1", productPurchaseResponses.get(0).name());
-        assertEquals(Money.of("10000"), productPurchaseResponses.get(0).purchaseAmount());
-        assertEquals(2L, productPurchaseResponses.get(1).productId());
-        assertEquals(2, productPurchaseResponses.get(1).quantity());
-        assertEquals("name2", productPurchaseResponses.get(1).name());
-        assertEquals(Money.of("40000"), productPurchaseResponses.get(1).purchaseAmount());
+        assertEquals(2, productPurchaseFeignRespons.size());
+        assertEquals(1L, productPurchaseFeignRespons.getFirst().productId());
+        assertEquals(1, productPurchaseFeignRespons.getFirst().quantity());
+        assertEquals("name1", productPurchaseFeignRespons.get(0).productName());
+        assertEquals(new BigDecimal("10000"), productPurchaseFeignRespons.get(0).purchaseAmount());
+        assertEquals(2L, productPurchaseFeignRespons.get(1).productId());
+        assertEquals(2, productPurchaseFeignRespons.get(1).quantity());
+        assertEquals("name2", productPurchaseFeignRespons.get(1).productName());
+        assertEquals(new BigDecimal("40000"), productPurchaseFeignRespons.get(1).purchaseAmount());
     }
 
     @Test
     void 존재하지_않는_상품을_구매하면_예외가_발생한다() {
         //given
-        List<ProductPurchaseRequest> productPurchaseRequests = List.of(
-                new ProductPurchaseRequest(1L, 1)
+        List<ProductPurchaseFeignRequest> productPurchaseFeignRequests = List.of(
+                new ProductPurchaseFeignRequest(1L, 1)
         );
         given(productRepository.findById(1L))
                 .willReturn(Optional.empty());
         //then
         assertThrows(IllegalArgumentException.class,
                 //when
-                () -> productService.purchaseProducts(productPurchaseRequests));
+                () -> productService.purchase(productPurchaseFeignRequests));
     }
 
     @Test
     void 재고_복구_시_존재하지_않는_상품이면_예외가_발생한다() {
         //given
-        List<ProductStockRecoveryRequest> requests = List.of(
-                new ProductStockRecoveryRequest(1L, 2),
-                new ProductStockRecoveryRequest(2L, 2)
+        List<ProductRestoreStockFeignRequest> requests = List.of(
+                new ProductRestoreStockFeignRequest(1L, 2),
+                new ProductRestoreStockFeignRequest(2L, 2)
         );
         given(productRepository.findById(1L))
                 .willReturn(Optional.empty());
@@ -179,6 +176,6 @@ class ProductServiceTest {
         //then
         assertThrows(IllegalArgumentException.class,
                 // when
-                () -> productService.stockRecovery(requests));
+                () -> productService.restockStock(requests));
     }
 }
